--- a/style.css
+++ b/style.css
@@ -35,8 +35,9 @@ footer {
   font-family: "Poppins";
   text-align: center;
   flex-direction: column;
-  position: absolute;
 
+  bottom: 0;
+  left: 0;
   width: 100%;
 }
 
